fix(#551): unreadable parameter names

--- a/app/styles/screwdriver-modal-styles.scss
+++ b/app/styles/screwdriver-modal-styles.scss
@@ -15,7 +15,7 @@
 }
 
 .detached-confirm-dialog {
-  max-width: 320px;
+  max-width: 80%;
 
   h3 {
     margin: 10px 0;
